--- a/System/TecSys/src/HomePage/TechnicalOfficerHomePage.form
+++ b/System/TecSys/src/HomePage/TechnicalOfficerHomePage.form
@@ -925,7 +925,11 @@
                                           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                                         </constraints>
                                         <properties>
-                                          <model/>
+                                          <model>
+                                            <item value=""/>
+                                            <item value="theory"/>
+                                            <item value="practical"/>
+                                          </model>
                                         </properties>
                                       </component>
                                       <component id="4222a" class="javax.swing.JButton" binding="attendenceUpdateBtn">
@@ -1076,7 +1080,7 @@
                                         <children>
                                           <component id="c0530" class="javax.swing.JLabel">
                                             <constraints>
-                                              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                                              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                                             </constraints>
                                             <properties>
                                               <font size="20"/>
@@ -1085,7 +1089,7 @@
                                           </component>
                                         </children>
                                       </grid>
-                                      <grid id="52f1e" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                                      <grid id="c757e" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                                         <margin top="0" left="0" bottom="0" right="0"/>
                                         <constraints>
                                           <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -1093,18 +1097,18 @@
                                         <properties/>
                                         <border type="none"/>
                                         <children>
-                                          <component id="feb2d" class="javax.swing.JLabel">
+                                          <component id="813ac" class="javax.swing.JLabel">
                                             <constraints>
-                                              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                                              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                                             </constraints>
                                             <properties>
                                               <font size="20"/>
-                                              <text value="Attendance Status:"/>
+                                              <text value="Atten Status:"/>
                                             </properties>
                                           </component>
                                         </children>
                                       </grid>
-                                      <grid id="6bd78" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                                      <grid id="7df85" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                                         <margin top="0" left="0" bottom="0" right="0"/>
                                         <constraints>
                                           <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -1112,18 +1116,18 @@
                                         <properties/>
                                         <border type="none"/>
                                         <children>
-                                          <component id="20727" class="javax.swing.JLabel">
+                                          <component id="29cbd" class="javax.swing.JLabel">
                                             <constraints>
-                                              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                                              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                                             </constraints>
                                             <properties>
                                               <font size="20"/>
-                                              <text value="Week No:"/>
+                                              <text value="Week no:"/>
                                             </properties>
                                           </component>
                                         </children>
                                       </grid>
-                                      <grid id="ca2e1" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                                      <grid id="75c39" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                                         <margin top="0" left="0" bottom="0" right="0"/>
                                         <constraints>
                                           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -1131,18 +1135,18 @@
                                         <properties/>
                                         <border type="none"/>
                                         <children>
-                                          <component id="67fc4" class="javax.swing.JLabel">
+                                          <component id="7cb6e" class="javax.swing.JLabel">
                                             <constraints>
-                                              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                                              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                                             </constraints>
                                             <properties>
                                               <font size="20"/>
-                                              <text value="Course Id:"/>
+                                              <text value="Course id:"/>
                                             </properties>
                                           </component>
                                         </children>
                                       </grid>
-                                      <grid id="1952d" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                                      <grid id="578ac" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                                         <margin top="0" left="0" bottom="0" right="0"/>
                                         <constraints>
                                           <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -1150,13 +1154,13 @@
                                         <properties/>
                                         <border type="none"/>
                                         <children>
-                                          <component id="9a225" class="javax.swing.JLabel">
+                                          <component id="36b2b" class="javax.swing.JLabel">
                                             <constraints>
-                                              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                                              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                                             </constraints>
                                             <properties>
                                               <font size="20"/>
-                                              <text value="Course Status:"/>
+                                              <text value="Course status:"/>
                                             </properties>
                                           </component>
                                         </children>
